--- a/django_blog/blog/templates/blog/login.html
+++ b/django_blog/blog/templates/blog/login.html
@@ -1,6 +1,22 @@
 {% extends 'blog/base.html' %}
 {% block title %}Login{% endblock %}
+
 {% block content %}
-<h1>Login Page</h1>
-<p>This is where the login form will go.</p>
+<h1>Login</h1>
+
+{% if messages %}
+  {% for message in messages %}
+    <p style="color: {% if message.tags == 'error' %}red{% else %}green{% endif %};">
+      {{ message }}
+    </p>
+  {% endfor %}
+{% endif %}
+
+<form method="POST">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit">Login</button>
+</form>
+
+<p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
 {% endblock %}
